# fei-examples

./: .gitignore  LICENSE  README.md  fei-examples.cabal  hie.yaml  mxnet-examples.cabal  stack.yaml
data/: download.sh
src/: Common.hs  cifar10.hs  custom-op.hs  faster-rcnn.hs  lenet.hs  rcnn.hs
src/DataIter/: Coco.hs
src/Model/: FasterRCNN.hs  Lenet.hs  ProposalTarget.hs  Resnet.hs  Resnext.hs  VGG.hs
src/RCNN/: RCNN.hs  check.hs  faster-rcnn.hs  mask-rcnn.hs
