name:           fei-examples
version:        0.4.0
synopsis:       fei examples
description:    Various fei examples
homepage:       https://github.com/pierric/fei-examples#readme
bug-reports:    https://github.com/pierric/fei-examples/issues
author:         Jiasen Wu
maintainer:     jiasenwu@hotmail.com
copyright:      2019 Jiasen Wu
license:        BSD3
license-file:   LICENSE
category:       Machine Learning, AI
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/pierric/fei-examples

Executable lenet
  main-is:              lenet.hs
  hs-source-dirs:       src
  ghc-options:          -Wall
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5.0
                      , rio
                      , formatting
                      , fei-base
                      , fei-nn
                      , fei-modelzoo
  default-extensions:   OverloadedLabels
                      , TypeFamilies
                      , DataKinds
                      , OverloadedStrings
                      , OverloadedLists
                      , TypeApplications
                      , NoImplicitPrelude

Executable cifar10
  main-is:              cifar10.hs
  hs-source-dirs:       src
  ghc-options:          -Wall
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5.0
                      , optparse-applicative
                      , lens
                      , rio
                      , formatting
                      , fei-base
                      , fei-nn
                      , fei-modelzoo
  default-extensions:   OverloadedLabels
                      , TypeFamilies
                      , DataKinds
                      , OverloadedStrings
                      , OverloadedLists
                      , TypeApplications
                      , NoImplicitPrelude

Executable custom-op
  main-is:            custom-op.hs
  hs-source-dirs:     src
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5.0
                      , rio
                      , formatting
                      , fei-base
                      , fei-nn
  default-extensions:   OverloadedLabels
                      , OverloadedStrings
                      , OverloadedLists
                      , TypeFamilies
                      , FlexibleInstances
                      , DataKinds
                      , TypeApplications
                      , NoImplicitPrelude
Executable faster-rcnn
  hs-source-dirs:      src/RCNN
  main-is:             faster-rcnn.hs
  other-modules:       RCNN
  ghc-options:          -Wall
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5.0
                      , optparse-applicative
                      , attoparsec
                      , lens
                      , repa
                      , random-fu
                      , conduit
                      , resourcet
                      , store
                      , wl-pprint-text
                      , vector-algorithms
                      , vector
                      , formatting
                      , rio
                      , fei-base
                      , fei-nn
                      , fei-cocoapi
                      , fei-datasets
                      , fei-modelzoo
  default-extensions:   OverloadedLabels
                      , TypeFamilies
                      , FlexibleContexts
                      , DataKinds
                      , OverloadedStrings
                      , OverloadedLists
                      , TypeApplications
                      , NoImplicitPrelude
Executable mask-rcnn
  hs-source-dirs:      src/RCNN
  main-is:             mask-rcnn.hs
  other-modules:       RCNN
  ghc-options:          -Wall
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5.0
                      , optparse-applicative
                      , attoparsec
                      , lens
                      , repa
                      , random-fu
                      , conduit
                      , resourcet
                      , store
                      , wl-pprint-text
                      , vector-algorithms
                      , vector
                      , formatting
                      , rio
                      , fei-base
                      , fei-nn
                      , fei-cocoapi
                      , fei-datasets
                      , fei-modelzoo
  default-extensions:   OverloadedLabels
                      , TypeFamilies
                      , FlexibleContexts
                      , DataKinds
                      , OverloadedStrings
                      , OverloadedLists
                      , TypeApplications
                      , NoImplicitPrelude
