name:           mxnet-examples
version:        0.2.0.0
synopsis:       mxnet examples
description:    Various mxnet examples
homepage:       https://github.com/pierric/mxnet-examples#readme
bug-reports:    https://github.com/pierric/mxnet-examples/issues
author:         Jiasen Wu
maintainer:     jiasenwu@hotmail.com
copyright:      2019 Jiasen Wu
license:        BSD3
license-file:   LICENSE
category:       Machine Learning, AI
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/pierric/mxnet-examples

Executable lenet
  main-is:              lenet.hs
  other-modules:        Model.Lenet
  hs-source-dirs:       src
  ghc-options:          -Wall
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5.0
                      , unordered-containers >= 0.2.8
                      , vector >= 0.12
                      , mxnet-base
                      , mxnet-ops
                      , mxnet-nn >= 0.0.2 && < 0.0.3
                      , mxnet-dataiter
  default-extensions:   OverloadedLabels
                      , TypeFamilies


Executable cifar10
  main-is:              cifar10.hs
  other-modules:        Model.Resnet,
                        Model.Resnext
  hs-source-dirs:       src
  ghc-options:          -Wall
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5.0
                      , unordered-containers >= 0.2.8
                      , vector >= 0.12
                      , optparse-applicative
                      , lens >= 4.12
                      , mxnet-base
                      , mxnet-ops
                      , mxnet-nn >= 0.0.2 && < 0.0.3
                      , mxnet-dataiter
  default-extensions:   OverloadedLabels
                      , TypeFamilies

Executable custom-op
  main-is:            custom-op.hs
  hs-source-dirs:     src
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5.0
                      , mxnet-base
                      , mxnet-ops
                      , mxnet-nn >= 0.0.2 && < 0.0.3
                      , mxnet-dataiter
                      , unordered-containers >= 0.2.8
                      , vector >= 0.12
  default-extensions:   OverloadedLabels
                      , TypeFamilies
                      , FlexibleInstances
Executable rcnn
  main-is:             rcnn.hs
  other-modules:       Model.VGG,
                       Model.FasterRCNN
  hs-source-dirs:      src
  ghc-options:          -Wall
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5.0
                      , unordered-containers >= 0.2.10
                      , vector >= 0.12
                      , optparse-applicative
                      , attoparsec
                      , text
                      , lens >= 4.12
                      , repa
                      , random-fu
                      , directory
                      , mtl
                    --   , cuda
                      , conduit
                      , mxnet-base
                      , mxnet-ops
                      , mxnet-nn >= 0.0.2 && < 0.0.3
                      , mxnet-dataiter
                      , mxnet-cocoapi
  default-extensions:   OverloadedLabels
                      , TypeFamilies

